Add full crud functionalities for stations and companies resources
